# opentools

./: .gitignore  README.md  main.py  pyproject.toml  test.py
src/opentools/: __init__.py
src/opentools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/opentools/adapters/: openai.py  utils.py
src/opentools/adapters/anthropic/: __init__.py  bundle.py  chat.py
src/opentools/adapters/frameworks/langgraph/: __init__.py
src/opentools/adapters/frameworks/pydantic_ai/: __init__.py
src/opentools/adapters/models/anthropic/: __init__.py  bundle.py  chat.py
src/opentools/adapters/models/gemini/: __init__.py  bundle.py  chat.py
src/opentools/adapters/models/ollama/: __init__.py  bundle.py  chat.py
src/opentools/adapters/models/openai/: __init__.py  bundle.py  chat.py
src/opentools/adapters/models/openrouter/: __init__.py  bundle.py  chat.py
src/opentools/auth/: __init__.py  coinbase_jwt.py  impl.py  interface.py  interfaces.py
src/opentools/core/: bundles.py  errors.py  frameworks.py  tool_policy.py  tool_runner.py  tools.py  transport.py  types.py
src/opentools/finance/: __init__.py  schemas.py  service.py
src/opentools/finance/providers/alpaca/: _endpoints.py  client.py
src/opentools/tests/: conftest.py
src/opentools/trading/: __init__.py  schemas.py  service.py  tools.py  utils.py
src/opentools/trading/providers/alpaca/: __init__.py  _endpoints.py  client.py  errors.py  mappers.py  tools.py  transport.py
src/opentools/trading/providers/alpaca/clients/: __init__.py  account.py  assets.py  clock.py  orders.py  portfolio.py  position.py
src/opentools/trading/providers/coinbase/: __init__.py  _endpoints.py  client.py  errors.py  mappers.py  tools.py  transport.py
src/opentools/trading/providers/coinbase/clients/: __init__.py  account.py  assets.py  orders.py  portfolio.py  position.py
src/opentools/trading/services/: __init__.py  base.py  core.py  multi.py  provider.py
src/opentools_sdk.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py
tests/helpers/: asserts.py  diff.py  dump.py
tests/integrations/: test_alpaca.py  test_coinbase.py
utils/: logging.py
